--- a/views/hello.pug
+++ b/views/hello.pug
@@ -8,3 +8,8 @@ block content
       label(for='name') Name:
       input#name.form-control(type='text', placeholder='first and last' name='name')
     button.btn.btn-primary(type='submit') submit
+  form(method='PUT')
+    div.form-group
+      label(for='name1') Name1:
+      input#name.form-control(type='text', placeholder='first and last' name='name1')
+    button.btn.btn-primary(type='submit') submit
